<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_your_profile" />
        <item
            android:id="@+id/nav_your_requests"
            android:icon="@drawable/ic_view_request"
            android:title="@string/nav_your_requests" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/nav_logout" />

    </group>


</menu>