<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_shade1"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <include
        android:id="@+id/progress_overlay_layout"
        layout="@layout/progress_overlay"
        android:background="@android:color/transparent"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/guru_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_et_margin"
        android:layout_marginEnd="@dimen/login_et_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_padding_vertical"
            android:background="@drawable/rounded_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_act_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/text_padding_vertical">

                <EditText
                    android:id="@+id/et_act_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/row_padding_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edt_padding_vertical" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/row_padding_vertical"
            android:layout_marginBottom="@dimen/row_padding_vertical"
            android:background="@color/secondary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_padding_vertical"
            android:background="@drawable/rounded_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_act_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/text_padding_vertical"

                >

                <EditText
                    android:id="@+id/et_act_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/row_padding_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/edt_padding_vertical"

                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_act_login_sign_in"
            style="@style/CustomButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:gravity="center"
            android:text="@string/or" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_g_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/or"
             android:gravity="center"
             android:layout_marginTop="@dimen/card_margin"
             android:layout_marginBottom="@dimen/card_margin"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/register_here"
             android:gravity="center"
             android:textColor="@color/primary"
             android:layout_marginTop="@dimen/card_margin"
             android:layout_marginBottom="@dimen/card_margin"
             />-->
    </LinearLayout>


</LinearLayout>